Bot posts schedule for next 24 hours into channel.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@devraelfreeze/discordjs-pagination": "^2.7.6",
         "better-sqlite3": "^11.3.0",
+        "dayjs": "^1.11.13",
         "discord.js": "^14.16.2",
         "discord.js-rate-limiter": "^1.3.2",
         "dotenv": "^16.4.5",
