--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
         "lint": "eslint . --ext .ts",
         "format": "prettier --write .",
         "start": "pnpm clean && pnpm build && node dist/bot.js",
-        "start:pm2": "pm2 start dist/index.js",
+        "pm2:start": "pm2 start ecosystem.config.cjs",
+        "pm2:stop": "pm2 stop ecosystem.config.cjs",
+        "pm2:delete": "pm2 delete ecosystem.config.cjs",
         "commands:deploy": "pnpm clean && pnpm build && node dist/deploy-command.js"
     },
     "keywords": [],
