--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,19 @@
 {
     "compilerOptions": {
-        "target": "ESNext",
-        "module": "ESNext",
+        "target": "ES2022",
         "lib": ["ESNext"],
+        "allowJs": true,
+        "resolveJsonModule": true,
+        "moduleDetection": "force",
+        "isolatedModules": true,
+        "verbatimModuleSyntax": true,
         "declaration": true,
+        "module": "NodeNext",
+        "outDir": "dist",
         "sourceMap": true,
-        "rootDir": "src",
-        "outDir": "./dist",
         "strict": true,
-        "moduleResolution": "node",
+        "noUncheckedIndexedAccess": true,
+        "noImplicitOverride": true,
         "esModuleInterop": true,
         "emitDecoratorMetadata": false,
         "experimentalDecorators": true,
