--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "lint": "eslint .",
         "lint:fix": "eslint --fix .",
         "format": "prettier --write .",
-        "start": "pnpm clean && pnpm build && node dist/bot.js",
+        "dev": "tsx src/bot.ts",
+        "start": "pnpm clean && pnpm build && node dist/src/bot.js",
         "pm2:start": "pm2 start ecosystem.config.cjs",
         "pm2:stop": "pm2 stop ecosystem.config.cjs",
         "pm2:delete": "pm2 delete ecosystem.config.cjs",
@@ -40,6 +41,7 @@
         "globals": "^15.9.0",
         "prettier": "^3.3.3",
         "rimraf": "^6.0.1",
+        "tsx": "^4.19.1",
         "typescript": "^5.6.2",
         "typescript-eslint": "^8.7.0"
     },
