--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
         "lint:fix": "eslint --fix .",
         "format": "prettier --write .",
         "dev": "tsx src/bot.ts",
-        "start": "pnpm clean && pnpm build && node dist/src/bot.js",
+        "start": "pnpm build && node dist/src/bot.js",
         "pm2:start": "pm2 start ecosystem.config.cjs",
         "pm2:stop": "pm2 stop ecosystem.config.cjs",
         "pm2:delete": "pm2 delete ecosystem.config.cjs",
-        "commands:deploy": "pnpm clean && pnpm build && node dist/deploy-command.js"
+        "commands:deploy": "pnpm build && node dist/src/deploy-command.js"
     },
     "keywords": [],
     "author": "",
