[refactor] Move functions into respective files.
Separate db logic from bot client logic.

Fixing the event listener memory leak by using global listeners.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,6 @@
     "editor.codeActionsOnSave": {
         "source.fixAll.eslint": "always"
     },
-    "eslint.rules.customizations": [{ "rule": "*", "severity": "warn" }],
+    // "eslint.rules.customizations": [{ "rule": "*", "severity": "warn" }],
     "typescript.tsdk": "node_modules/typescript/lib"
 }
