[feat] Schedule command for VCT and League.
[refactor] API requests by folder. Swapped to undici

Added constants for esport info (name, shortcode and markdown)

Bot now correctly runs every 5 minutes and checks for already posted matches by id from DB.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,13 @@
 services:
-    esportpredictionbot:
+    bot:
         build:
             context: .
             dockerfile: Dockerfile
-        command: ['node', 'dist/bot.js']
-        restart: always
-        environment:
-            - CLIENT_ID=${CLIENT_ID}
-            - GUILD_ID=${GUILD_ID}
-            - DISCORD_TOKEN=${DISCORD_TOKEN}
+        restart: unless-stopped
+        env_file:
+            - .env
+        volumes:
+            - ./data:/data
+
+volumes:
+    data:
