--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
         "lint:fix": "eslint --fix .",
         "format": "prettier --write .",
         "dev": "tsx src/bot.ts",
-        "start": "node dist/bot.js",
+        "start": "node dist/src/bot.js",
         "pm2:start": "pm2 start ecosystem.config.cjs",
         "pm2:stop": "pm2 stop ecosystem.config.cjs",
         "pm2:delete": "pm2 delete ecosystem.config.cjs",
-        "commands:deploy": "pnpm build && node dist/deploy-command.js"
+        "commands:deploy": "pnpm build && node dist/src/deploy-command.js"
     },
     "keywords": [],
     "author": "",
@@ -26,11 +26,11 @@
         "discord.js": "^14.16.2",
         "discord.js-rate-limiter": "^1.3.2",
         "dotenv": "^16.4.5",
-        "node-fetch": "^3.3.2",
         "node-schedule": "^2.1.1",
         "pino": "^9.4.0",
         "pino-pretty": "^11.2.2",
         "pm2": "^5.4.2",
+        "undici": "^6.19.8",
         "zod": "^3.23.8"
     },
     "devDependencies": {
